--- a/css/estilos.css
+++ b/css/estilos.css
@@ -47,7 +47,7 @@ body
 }
 #post
 {
-    background: #33A;
+    background: white;
     box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.75);
     color: white;
     font-weight: bold;
