--- a/css/estilos.css
+++ b/css/estilos.css
@@ -49,7 +49,7 @@ body
 {
     background: white;
     box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.75);
-    color: white;
+    color: black;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
